--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.5",
     "clsx": "^2.1.0",
+    "svelte-sonner": "^0.3.22",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   }
