--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
+    "svelte-radix": "^1.1.0",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -38,7 +39,9 @@
   "dependencies": {
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.5",
+    "bits-ui": "^0.21.4",
     "clsx": "^2.1.0",
+    "mode-watcher": "^0.3.0",
     "svelte-sonner": "^0.3.22",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
